style: fix framework jumplinks description visibility

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -372,7 +372,14 @@ li.formkit-message {
 }
 .framework-jumplinks a span {
   position: absolute;
-  left: -999px;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: inset(50%);
+  white-space: nowrap;
+  border-width: 0;
 }
 .balls {
   background: url('./img/triangle.svg');
